--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "@supabase/supabase-js": "^2.24.0",
+    "axios": "^1.4.0",
     "vue": "^3.3.2",
     "vue-router": "^4.2.2"
   },
@@ -35,6 +37,7 @@
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
+    "supabase": "^1.64.8",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.5",
     "vitest": "^0.31.0"
