--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "atlantis-careers",
   "version": "0.0.0",
   "scripts": {
-    "start": "vite",
+    "start": "node main.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
