--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "serve": "vue-cli-service serve",
     "build": "vite build",
-    "start": "vue-cli-service serve",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --coverage",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
